# wormgearcalc

./: .gitignore  CLAUDE.md  CODE_REVIEW.md  GLOBOID_CONSTRAINTS_IMPLEMENTED.md  GLOBOID_CORRECTION.md  GLOBOID_IMPLEMENTATION.md  README.md  TEST_IMPROVEMENTS_SUMMARY.md  pyproject.toml
.github/: README.md
.github/workflows/: deploy.yml
docs/: GEOMETRY.md  SPEC.md  WEB_APP.md
src/wormcalc/: __init__.py  cli.py  core.py  output.py  validation.py
tests/: test_cli.py  test_core.py  test_output.py  test_validation.py
web/: README.md  app.js  index.html  style.css  test.html
web/wormcalc/: __init__.py  core.py  output.py  validation.py
